force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__AccountID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>XCDeals</relationshipLabel>
    <relationshipName>XCDeals</relationshipName>
    <type>Lookup</type>
</CustomField>