force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__Boolean1__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Boolean1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean1</label>
    <type>Checkbox</type>
</CustomField>