force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__Boolean3__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Boolean3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean3</label>
    <type>Checkbox</type>
</CustomField>