force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__Comment2__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Comment2__c</fullName>
    <label>Comment2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>