force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__Currency1__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Currency1__c</fullName>
    <label>Currency1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>