force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__Currency9__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Currency9__c</fullName>
    <label>Currency9</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>