force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__Date2__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Date2__c</fullName>
    <label>Date2</label>
    <type>Date</type>
</CustomField>