force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__Date5__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Date5__c</fullName>
    <label>Date5</label>
    <type>Date</type>
</CustomField>