force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__DealID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DealID__c</fullName>
    <label>DealID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>