force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__Number10__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Number10__c</fullName>
    <label>Number10</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>