force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__Number2__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Number2__c</fullName>
    <label>Number2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>