force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__ProfileID3__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProfileID3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProfileID3</label>
    <referenceTo>XactlyExpress__XCProfile__c</referenceTo>
    <relationshipLabel>XCDeal (ProfileID3)</relationshipLabel>
    <relationshipName>XCDeal3</relationshipName>
    <type>Lookup</type>
</CustomField>