force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__ProfileID4__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProfileID4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProfileID4</label>
    <referenceTo>XactlyExpress__XCProfile__c</referenceTo>
    <relationshipLabel>XCDeal (ProfileID4)</relationshipLabel>
    <relationshipName>XCDeal4</relationshipName>
    <type>Lookup</type>
</CustomField>