force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__ProfileID5__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProfileID5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProfileID5</label>
    <referenceTo>XactlyExpress__XCProfile__c</referenceTo>
    <relationshipLabel>XCDeal (ProfileID5)</relationshipLabel>
    <relationshipName>XCDeal5</relationshipName>
    <type>Lookup</type>
</CustomField>