force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__SourceID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SourceID__c</fullName>
    <label>SourceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>