force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__String11__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__String11__c</fullName>
    <label>String11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>