force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__String16__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__String16__c</fullName>
    <label>String16</label>
    <length>255</length>
    <type>Text</type>
</CustomField>