force-app/main/default/objects/XactlyExpress__XCDeal__c/fields/XactlyExpress__UserId__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__UserId__c</fullName>
    <label>UserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>